# metascope-api

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 555c1c687cc6_create_core_tables_with_timestamptz.py  6064e39a582a_create_core_tables.py
app/: main.py
app/collector/: tasks.py
app/core/: cache.py  celery.py  config.py  database.py  db_utils.py  dependencies.py  exceptions.py  logging.py  models.py  redis.py  schemas.py
app/game/: router.py  schemas.py  service.py
app/match/: exceptions.py  jobs.py  models.py  router.py  schemas.py  service.py
app/meta/: jobs.py  models.py  router.py  schemas.py  seed_service.py  seed_service_cdragon.py  stats_service.py
app/player/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/ports/community_dragon/: client.py  transformer.py
app/ports/data_dragon/: client.py  transformer.py
app/ports/riot/: client.py  rate_limiter.py  transformer.py
app/scripts/: seed.py  seed_champions.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  FEATURES.md
scripts/: init_db.sql
tests/: conftest.py
tests/game/: test_champions.py
tests/match/: test_jobs.py  test_router.py  test_service.py
tests/meta/: test_jobs.py  test_router.py  test_seed_service.py  test_stats_service.py  test_tier_list.py
tests/player/: test_router.py  test_service.py
tests/ports/: test_data_dragon_client.py  test_riot_client.py  test_transformer.py
