[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metascope-api"
version = "0.1.0"
description = "TFT Meta Analytics & Player Lookup API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",

    # Database
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",

    # Cache & Task Queue
    "redis[asyncio]==5.0.8",
    "celery[redis]==5.4.0",
    "flower==2.0.1",

    # HTTP Client
    "httpx==0.27.2",

    # Validation & Config
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # Auth
    "pyjwt==2.9.0",
    "passlib[bcrypt]==1.7.4",
    "authlib==1.3.2",
    "python-multipart==0.0.12",

    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "orjson==3.10.7",

    # Payments
    "stripe==10.12.0",

    # Monitoring
    "prometheus-fastapi-instrumentator==7.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.27.2",    # async test client
    "factory-boy==3.3.1",
    "faker==30.1.0",

    # Code quality
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-redis==4.6.0.20240819",

    # Dev utilities
    "ipython==8.27.0",
    "rich==13.9.1",
    "pre-commit==4.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ASYNC",# flake8-async (catch sync calls in async functions)
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
exclude = ["alembic/"]

# ── Pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=75",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── Coverage ─────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "*/migrations/*",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
